# sound-manager-rust

./: .envrc  README.md  index.html  package.json  pnpm-lock.yaml  prettier.config.js  vite.config.ts
src/: App.vue  api.ts  config.ts  main.ts  style.ts  types.d.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: core.rs  lib.rs  main.rs  response.rs
src-tauri/src/core/: database.rs  entry.rs  filter.rs  folder.rs  migrator.rs  player.rs  tag.rs  waveform.rs
src-tauri/src/core/database/: entry.rs  file_watcher.rs  files.rs  filter.rs  folder.rs  spotter.rs  tag.rs  tests.rs
src-tauri/src/core/migrator/: billfish_migrator.rs
src/assets/: global.css  variables.css
src/components/: AudioList.vue  CollapseHandler.vue  DatabaseView.vue  FilterPanel.vue  FolderItem.vue  FolderList.vue  MetadataPanel.vue  MetadataTagEditor.vue  Player.vue  Startup.vue  TagList.vue  Waveform.vue
src/components/audio-list/: AudioList.vue  FilterPanel.vue
src/components/audio-list/datatable/: BaseDataTable.vue  BodyRow.vue  ColumnFilter.vue  DataTable.d.ts  DataTable.vue  FilterHeaderCell.vue  HeaderCell.vue  HeaderCheckbox.vue  RowCheckbox.vue  RowRadioButton.vue  TableBody.vue  TableFooter.vue
src/components/audio-list/treeselect/: TreeSelect.vue
src/components/drop-indicator/: Outline.vue
src/components/folder-list/: FolderItem.vue  FolderList.vue
src/components/metadata-panel/: MetadataPanel.vue  MetadataTagEditor.vue
src/components/player/: Player.vue  Spotter.vue  Waveform.vue
src/components/sortabletree/: BaseTree.vue  Tree.d.ts  Tree.spec.js  Tree.vue  TreeNode.vue  package.json
src/components/sortabletree/dropindicator/: DropIndicator.vue  Line.vue  Outline.vue
src/components/sortabletree/style/: TreeStyle.d.ts  TreeStyle.js  package.json
src/components/sortabletreenode/: TreeNode.d.ts
src/components/startup/: MigrationMessage.vue  Startup.vue
src/components/tag-list/: TagItem.vue  TagList.vue
src/components/tag-list/tree/: BaseTree.vue  Tree.d.ts  Tree.vue  TreeNode.vue
src/components/tag-list/tree/dropindicator/: DropIndicator.vue  Line.vue
src/utils/: drag-and-drop.ts  message.ts  playback-timer.ts  tag-tree.ts  utils.ts  window-drag-region.ts
src/views/database-view/: DatabaseView.vue  MenuBar.vue
src/views/database-view/audio-list/: AudioList.vue  FilterPanel.vue
src/views/database-view/audio-list/datatable/: BodyCell.vue  DataTable.d.ts  DataTable.vue  FooterCell.vue  TableHeader.vue  package.json
src/views/database-view/audio-list/tree/: TreeNode.vue
src/views/database-view/folder-list/: FolderItem.vue  FolderList.vue
src/views/database-view/metadata-panel/: MetadataPanel.vue  MetadataTagEditor.vue
src/views/database-view/player/: Player.vue  Spotter.vue  Waveform.vue
src/views/database-view/tag-list/: TagItem.vue  TagList.vue
src/views/startup/: MigrationMessage.vue  Startup.vue
