[package]
name = "sound-manager-rust"
version = "0.1.0"
description = "Sound Manager"
authors = ["Fidel Yin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sound_manager_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.11"
futures = "0.3.31"
async-std = "1.13.0"
log = "0.4.26"
simplelog = "0.12.2"
rusqlite = { version = "0.33.0", features = ["bundled"] }
symphonia = { version = "0.5.4", features = ["mp3", "opt-simd"] }
rodio = { version = "0.20.1", default-features = false, features = [
    "symphonia-wav",
    "symphonia-flac",
    "symphonia-mp3",
    "symphonia-aac",
] }
notify-debouncer-full = "0.5.0"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
